# sharefeed

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN-MULTI-NETWORK.md  PLAN.md  README.md  TESTING.md  flake.nix  package-lock.json  package.json
.claude/: settings.local.json
dnas/sharefeed/workdir/: dna.yaml
dnas/sharefeed/zomes/coordinator/profiles/: Cargo.toml
dnas/sharefeed/zomes/coordinator/sharefeed/: Cargo.toml
dnas/sharefeed/zomes/coordinator/sharefeed/src/: feed.rs  lib.rs  share_item.rs
dnas/sharefeed/zomes/integrity/profiles/: Cargo.toml
dnas/sharefeed/zomes/integrity/sharefeed/: Cargo.toml
extension/: TESTING.md
extension/src/background/: service-worker.ts
extension/src/popup/: Popup.svelte
extension/src/storage/: holochain-storage.ts  storage-manager.ts
extension/src/types/: share.ts
tests/: Cargo.toml  README.md
tests/src/: lib.rs
ui/: TESTING.md  package.json  vite.config.ts
ui/src/: App.svelte  app.css  diceware-word.d.ts  main.ts
ui/src/lib/: index.ts  secrets.ts
ui/src/lib/components/: AccessibilityPanel.svelte  FeedList.svelte  NetworkModal.svelte  NetworkSwitcher.svelte  ProfileButton.svelte  ProfileDialog.svelte  ShareCard.svelte  ShareForm.svelte  index.ts
ui/src/lib/holochain/: client.ts  connection.ts  index.ts  networks.ts  types.ts
ui/src/lib/stores/: feeds.svelte.ts  index.ts  networks.ts  profiles.ts  settings.ts  shares.svelte.ts  shares.ts
ui/src/lib/types/: index.test.ts  index.ts  network.ts
ui/src/routes/: +layout.ts
workdir/: happ.yaml  web-happ.yaml
(+3 files in other folders)
