[package]
name = "sharefeed_tests"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
holochain = { version = "0.6.0", features = ["sweettest"] }
holochain_types = "0.6.0"
holochain_trace = "0.5.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
